Cell: fixed .Cell__remove vertical align of text; added event and rootEl to onRemove callback arguments.

--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -127,7 +127,14 @@
     line-height: 45px;
     font-size: 15px;
     transition: transform .6s var(--ios-easing);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
+
+    .Cell--ios .Cell__remove-in {
+      flex-shrink: 0;
+      }
 
   .List--ios .Cell__chevron {
     color: var(--separator);
